[fix] z-index value to 999999 (re: issue#2)

--- a/css/jquery-eu-cookie-law-popup.css
+++ b/css/jquery-eu-cookie-law-popup.css
@@ -10,7 +10,7 @@
 	line-height: 1.2em;
 	text-align: center;
 	display: none;
-	z-index: 1100;
+	z-index: 9999999;
 }
 
 .eupopup-container-top,
